cmake_minimum_required(VERSION 2.8.3)
project(schunk_bringup)

find_package(catkin REQUIRED COMPONENTS robot_state_publisher schunk_sdh schunk_powercube_chain schunk_hardware_config cob_trajectory_controller schunk_default_config cob_script_server cob_dashboard cob_command_gui cob_teleop ipa_canopen_ros rviz joy)

roslaunch_add_file_check(components)
roslaunch_add_file_check(tools)

catkin_package(
    DEPENDS robot_state_publisher schunk_sdh schunk_powercube_chain schunk_hardware_config cob_trajectory_controller schunk_default_config cob_script_server cob_dashboard cob_command_gui cob_teleop ipa_canopen_ros rviz joy
)