<package>
  <name>schunk_bringup</name>
  <version>0.1.3</version>
  <description>This package provides launch files for operating Schunk components.</description>

  <maintainer email="florian.weisshardt@ipa.fraunhofer.de">Florian Weisshardt</maintainer>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/schunk_bringup</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Florian Weisshardt</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>schunk_sdh</build_depend>
  <build_depend>schunk_powercube_chain</build_depend>
  <build_depend>schunk_hardware_config</build_depend>
  <build_depend>cob_trajectory_controller</build_depend>
  <build_depend>schunk_default_config</build_depend>
  <build_depend>cob_script_server</build_depend>
  <build_depend>cob_dashboard</build_depend>
  <build_depend>cob_command_gui</build_depend>
  <build_depend>cob_teleop</build_depend>
  <build_depend>ipa_canopen_ros</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>joy</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>schunk_sdh</run_depend>
  <run_depend>schunk_powercube_chain</run_depend>
  <run_depend>schunk_hardware_config</run_depend>
  <run_depend>cob_trajectory_controller</run_depend>
  <run_depend>schunk_default_config</run_depend>
  <run_depend>cob_script_server</run_depend>
  <run_depend>cob_dashboard</run_depend>
  <run_depend>cob_command_gui</run_depend>
  <run_depend>cob_teleop</run_depend>
  <run_depend>ipa_canopen_ros</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joy</run_depend>

</package>