cmake_minimum_required(VERSION 2.8.3)
project(schunk_bringup_sim)
find_package(catkin REQUIRED COMPONENTS schunk_bringup schunk_hardware_config schunk_controller_configuration_gazebo gazebo_ros cob_teleop)

roslaunch_add_file_check(launch)

catkin_package(
    DEPENDS schunk_bringup schunk_hardware_config schunk_controller_configuration_gazebo gazebo_ros cob_teleop
)