<package>
  <name>schunk_bringup_sim</name>
  <version>0.1.3</version>
  <description>This package provides launch files for starting a simulated Schunk components.</description>
  <maintainer email="">Florian Weisshardt</maintainer>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/schunk_bringup_sim</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Florian Weisshardt</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>schunk_bringup</build_depend>
  <build_depend>schunk_hardware_config</build_depend>
  <build_depend>schunk_controller_configuration_gazebo</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>cob_teleop</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>schunk_bringup</run_depend>
  <run_depend>schunk_hardware_config</run_depend>
  <run_depend>schunk_controller_configuration_gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>cob_teleop</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>schunk_bringup</test_depend> -->
  <!-- <test_depend>schunk_hardware_config</test_depend> -->
  <!-- <test_depend>schunk_controller_configuration_gazebo</test_depend> -->
  <!-- <test_depend>gazebo_ros</test_depend> -->
  <!-- <test_depend>cob_teleop</test_depend> -->

</package>