<package>
  <name>schunk_controller_configuration_gazebo</name>
  <version>0.1.3</version>
  <description>This packages provides the controller configuration for simulating Schunk components in the gazebo simulator.</description>
  <maintainer email="nadia.hammoudeh.garcia@ipa.fraunhofer.de">Nadia Hammoudeh Garcia</maintainer>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/schunk_controller_configutarion_gazebo</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Nadia Hammoudeh Garcia</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rostopic</build_depend>
  <build_depend>pr2_controller_manager</build_depend>
  <build_depend>joint_trajectory_action</build_depend>
  <build_depend>schunk_simulated_tactile_sensors</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rostopic</run_depend>
  <run_depend>pr2_controller_manager</run_depend>
  <run_depend>joint_trajectory_action</run_depend>
  <run_depend>schunk_simulated_tactile_sensors</run_depend>

</package>