<package>
  <name>schunk_demo</name>
  <version>0.1.3</version>
  <description>schunk_arm_navigation</description>
  <maintainer email="thiagodefreitas@gmail.com">Thiago de Freitas</maintainer>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/schunk_arm_navigation</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Thiago de Freitas</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>cob_script_server</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>cob_script_server</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>

</package>