<package>
  <name>schunk_hardware_config</name>
  <version>0.1.3</version>
  <description>This package contains an example configuration for each Schunk component.</description>
  <maintainer email="">Florian Weisshardt</maintainer>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/schunk_hardware_config</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Florian Weisshardt</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>cob_description</build_depend>
  <build_depend>schunk_description</build_depend>
  <build_depend>schunk_sdh</build_depend>
  <build_depend>schunk_powercube_chain</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>cob_description</run_depend>
  <run_depend>schunk_description</run_depend>
  <run_depend>schunk_sdh</run_depend>
  <run_depend>schunk_powercube_chain</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>cob_description</test_depend> -->
  <!-- <test_depend>schunk_description</test_depend> -->
  <!-- <test_depend>schunk_sdh</test_depend> -->
  <!-- <test_depend>schunk_powercube_chain</test_depend> -->

</package>