<package>
  <name>schunk_lwa4p_extended</name>
  <version>0.5.0</version>

  <description>

     schunk_lwa4p_extended

  </description>
  
  <license>LGPL</license>
  
  <url type="website">http://ros.org/wiki/schunk_lwa4p_extended</url>
  <author email="fxm-fm@ipa.fhg.de">Francisco Moreno</author>
  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>ipa_canopen_ros</run_depend>
  <run_depend>cob_command_gui</run_depend>
  <run_depend>cob_dashboard</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>cob_teleop</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>cob_trajectory_controller</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>controller_manager</run_depend>

  <export>

  </export>
</package>
