<package format="2">
  <name>schunk_lwa4p_extended</name>
  <version>0.5.0</version>

  <description> schunk_lwa4p_extended </description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/schunk_lwa4p_extended</url>

  <author email="fxm@ipa.fhg.de">Felix Messmer</author>
  <maintainer email="bfb@ipa.fhg.de">Bruno Brito</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>rostest</depend>

  <exec_depend>canopen_motor_node</exec_depend>
  <exec_depend>cob_cartesian_controller</exec_depend>
  <exec_depend>cob_command_gui</exec_depend>
  <exec_depend>cob_control_mode_adapter</exec_depend>
  <exec_depend>cob_dashboard</exec_depend>
  <exec_depend>cob_description</exec_depend>
  <exec_depend>cob_frame_tracker</exec_depend>
  <exec_depend>cob_gazebo_ros_control</exec_depend>
  <exec_depend>cob_helper_tools</exec_depend>
  <exec_depend>cob_obstacle_distance</exec_depend>
  <exec_depend>cob_twist_controller</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>schunk_description</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
