<package format="2">
  <name>schunk_robots</name>
  <version>0.5.0</version>
  <description>

    This stack holds packages for hardware configuration as well as launch files for starting up Schunk components.

  </description>
  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/schunk_robots</url>

  <maintainer email="bfb@ipa.fhg.de">Bruno Brito</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>schunk_lwa4d</exec_depend>
  <exec_depend>schunk_lwa4p</exec_depend>
  <exec_depend>schunk_lwa4p_extended</exec_depend>
  <exec_depend>schunk_pg70</exec_depend>
  <exec_depend>schunk_pw70</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
